--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,12 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.61</version>
     </dependency>
-      <dependency>
-          <groupId>org.jetbrains</groupId>
-          <artifactId>annotations</artifactId>
-          <version>13.0</version>
-          <scope>compile</scope>
-      </dependency>
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.9.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
